mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-deployment
  name: mysql-deployment
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-app
      type: database
  template:
    metadata:
      labels:
        app: mysql-app
        type: database
    spec:
      containers:
      - image: mysql
        name: mysql-app
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-data
        hostPath:
          path: /opt/mysql-data
          type: Directory
