nginx-sts-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-sts-headless-svc
spec:
  ports:
  - port: 80
  clusterIP: None
  selector:
     app: nginx-sts
